sass/main.scss
// font
@font-face {
  font-family: century;
  src: url("../dist/century-gothic-font/CenturyGothic.ttf");
  src: url("../dist/century-gothic-font/GOTHIC.TTF");
  src: url("../dist/century-gothic-font/GOTHICB.TTF");
  src: url("../dist/century-gothic-font/GOTHICB0.TTF");
  src: url("../dist/century-gothic-font/GOTHICBI.TTF");
  src: url("../dist/century-gothic-font/GOTHICI.TTF");
  font-weight: normal;
  font-style: normal;
}

// Variables
$primary-color: #e5e5e5;
$secondary-color: #ff3d00;
$background-color: #f8f9fa;
$text-color: #212529;

// Reset
html,
body {
  font-family: "century", sans-serif;
  box-sizing: border-box;
  background-color: $background-color;
  height: 100%;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

.btn {
  background-color: $secondary-color;
  color: $background-color;

  &:hover {
    color: $secondary-color;
    background-color: $background-color;
  }
}

// Utilities
.text-muted {
  text-decoration: line-through;
}

.title-break {
  height: 4px;
  width: 300px;
  background-color: $primary-color;
  margin: auto;
}

.wrapper {
  min-height: calc(100vh - 70px);
}

.showModal {
  opacity: 1 !important;
  top: 66px !important;
  z-index: 99 !important;
}

.show {
  opacity: 1 !important;
}

.hide {
  opacity: 0 !important;
}

.sell-page-bg {
  background: url("../dist/images/form_showcase.jpg") center bottom/cover;
}
// Navbar and Footer
#main {
  &-navbar {
    z-index: 99;
    background-color: $primary-color;

    .nav-brand {
      transition: all 0.5s ease-in-out;

      &:hover {
        transform: rotate3d(0.5, 0.5, 1, 360deg);
      }

      .shoes-icon {
        height: 50px;
        width: 70px;
      }
    }

    .nav-link {
      position: relative;
      color: $text-color;
      margin-right: 2rem;

      &::before {
        position: absolute;
        content: "";
        bottom: 0;
        left: 0px;
        height: 2px;
        width: 0px;
        background-color: $text-color;
        transition: all 0.2s ease-in-out;
      }

      &:hover::before {
        width: 100%;
      }
    }

    .shopping-cart {
      .badge {
        position: absolute;
        top: 0;
        right: 0;
        height: 20px;
        width: 20px;
        border-radius: 50%;
        /* padding: 0.5rem; */
        background-color: #ff3d00;
        color: $primary-color;
        border: 1px solid $background-color;
        white-space: nowrap;
        text-align: center;
        font-size: 10px;
        transition: all 0.5s ease-in-out;
      }

      &:hover .badge {
        background-color: $background-color;
        color: $text-color;
        border-color: $text-color;
      }
    }
  }

  &-footer {
    height: 70px;
    width: 100%;
    background-color: $primary-color;
  }
}

// Modal card
.cart-modal {
  position: absolute;
  top: -50vh;
  right: 10px;
  width: 400px;
  max-height: 80vh;
  overflow: auto;
  background-color: $background-color;
  opacity: 0;
  transition: all 0.5s ease-in-out;

  &-item {
    border-bottom: 1px solid $primary-color;

    &:last-child {
      border: none;
    }

    img {
      width: 50px;
      height: 50px;
      margin-bottom: 0.75rem;
      margin-right: 2rem;
    }

    &-info {
      max-width: 80%;
      overflow: auto;
    }
  }

  &-total {
    background-color: $primary-color;

    &-pay {
      color: $secondary-color;
    }

    &-wrapper {
      display: flex;
      justify-content: space-around;
      align-items: center;
    }
  }
}

// Home page
#home {
  &-carousel {
    .carousel-inner {
      .carousel-item {
        img {
          height: 60vh;
        }

        &::before {
          position: absolute;
          content: "";
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background-color: rgba(0, 0, 0, 0.3);
        }
      }

      .carousel-caption {
        bottom: 20vh;
      }
    }
  }

  &-product {
    > h1 {
      margin-top: 3rem;
    }

    .card {
      overflow: hidden;
      border: none;
      height: 600px;
      border-radius: unset;
      border-bottom: 1px solid $primary-color;
      background-color: $background-color;

      .discount {
        background-image: url("images/deal-tag.png");
        background-size: 50px 40px;
        background-position: 0px 0px;
        position: absolute;
        top: -20px;
        left: 44px;
        width: 50px;
        height: 40px;
        color: #ffffff;
        padding-bottom: 4px;
        text-align: center;
        transition: all 0.5s ease-in-out;
        z-index: 2;
      }

      &-title {
        border-bottom: 2px solid transparent;
        transition: all 0.5s ease-in-out;
        white-space: nowrap;
        overflow-x: auto;
      }

      &:hover {
        .discount {
          top: 24px;
        }

        &-title > & {
          border-color: $primary-color;
        }
      }
      &-img {
        position: relative;
        top: 0;
        left: 20px;
        width: 100%;
        height: 250px;

        &::before {
          position: absolute;
          content: "";
          top: 0px;
          left: 0px;
          right: 0px;
          /* bottom: 4px; */
          height: 0%;
          background-color: rgba(0, 0, 0, 0.5);
          transition: all 0.5s ease-in-out;
          z-index: 1;
        }

        &-top {
          width: 100%;
          height: 250px;
        }

        &-description {
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 250px;
          overflow: scroll;
          text-align: justify;
          padding-top: 1rem;
          color: #ffffff;
          opacity: 0;
          transition: all 0.5s ease-in-out;
          z-index: 100;

          p {
            padding: 0.5rem;
          }
        }

        &:hover {
          &::before {
            height: 100%;
          }

          .card-img-description {
            opacity: 1;
          }
        }
      }

      &-body {
        .card-price {
          color: $secondary-color;
          font-weight: bold;
        }
      }
    }
  }

  &-contact {
    .col-md-4 {
      cursor: pointer;
      transition: all 0.3s ease-in-out;

      &:hover {
        color: $secondary-color;
      }
    }

    i {
      margin-bottom: 2rem;
    }
  }

  &-about {
    background: url("images/footer-bg.jpg") center center/cover;

    li {
      cursor: pointer;
      transition: all 0.3s ease-in-out;
      &:hover {
        color: $secondary-color;
      }
    }

    .fab {
      color: $text-color;
      transition: all 0.5s ease-in-out;
      &:hover {
        color: $primary-color;
      }
    }
  }
}

// Sell page
#sell-page {
  input,
  select,
  textarea {
    border-radius: 5px;
    box-shadow: 1px 2px 3px 0px $text-color;
  }

  .form-row {
    width: 70%;

    label {
      display: inline-block;
    }
  }

  #form {
    &-name,
    &-price,
    &-discount {
      width: auto;
    }
    &-file {
      width: 50%;
    }
    &-item-description {
      width: 100%;
      padding: 1rem;
    }
  }

  #img-view {
    opacity: 0;
    width: 100px;
    height: 100px;
  }

  .validate {
    display: inline-grid;

    &-content {
      padding-top: 4px;
      margin: 0;
      font-size: 12px;
      color: $secondary-color;
      opacity: 0;
    }
  }
}

// Cart page

.cart-page {
  &-item {
    display: flex;
    align-items: center;
    height: 50px;
    overflow: auto;
    border-bottom: 1px solid rgba(52, 58, 64, 0.2);
    transition: all 0.3s ease-in-out;

    :hover {
      transform: translateX(5px) translateY(5px);
      font-weight: bold;
    }

    &-header {
      display: flex;
      height: 40px;
      width: 100wh;
      padding: 0 1rem;
      align-items: center;
      background-color: var(--background-color);
      border-bottom: 1px solid var(--primary-color);
      font-weight: bold;

      &-title {
        width: 40%;
        text-align: center;
      }

      &-unit-price {
        width: 15%;
        text-align: center;
      }

      &-quantity {
        width: 15%;
        text-align: center;
      }

      &-total {
        width: 15%;
        text-align: center;
      }

      &-action {
        width: 15%;
        text-align: center;
      }
    }

    &-title {
      width: 40%;
      text-align: center;
    }

    &-unit-price {
      width: 15%;
      text-align: center;
    }

    &-quantity {
      width: 15%;
      text-align: center;
      border: none;
      background: transparent;
      outline: none;
    }

    &-total {
      width: 15%;
      text-align: center;
    }

    &-action {
      width: 15%;
      text-align: center;
    }

    &-wrapper {
      max-height: 48%;
      overflow-y: auto;
    }
  }

  &-total {
    color: $secondary-color;
    margin: 1rem auto;
    width: 300px;
    text-align: center;
  }
}

@media only screen and (max-width: 769px) {
  #home-about ul {
    border-bottom: 1px solid $primary-color;
  }

  #home-about ul:last-child {
    border: none;
  }
}

